clusters/mharikmert.dev/default/education-portal/portal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-frontend-svc
  name: portal-frontend-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: portal-frontend
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-backend-svc
  name: portal-backend-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: portal-backend
  type: ClusterIP
